Refactoring index logic